# GROUP4_FYP

./: .gitignore
Group4_FYP/: .gitignore
Group4_FYP/Assets/: AudioMixer.mixer  Down.anim  GameController.cs  InputActions.inputactions  Left.anim  MaskingCanvas.cs  Notification.cs  NotificationPanel.cs  Orb.cs  Portal.anim  Portal_0.controller  TooltipPanel.cs  WeaponUpgradePanel.cs
Group4_FYP/Assets/Animation/: AcidSplash.anim  AcidSplash_0.controller  AutoAttack_0.controller  Blob.anim  BlobHive.anim  BlobHive_0.controller  Blob_0 1.controller  Blob_0.controller  GoldenBlob.anim  Idle.anim  M-DeadAnimation_0.controller  MeleeSlash.anim  MeleeSlash_0.controller  SlimeAnimation.anim  Smoke.anim  Smoke2.anim  Smoke2_0.controller  Smoke_0.controller  Sprite-0001-Sheet_0.controller  Sprite-idle and attack_0.controller  Tornado.anim  Tornado_0.controller  WaterBall.anim  arrowTower.anim  (+1 more)
Group4_FYP/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Group4_FYP/UserSettings/: EditorUserSettings.asset  Search.settings
Group4_FYP_Website/: MANIFEST.in  README.rst  setup.cfg
Group4_FYP_Website/poh/: __init__.py  activation.py  game_data.py  leaderboard.py  models.py  schema.sql  stats.py
Group4_FYP_Website/poh/templates/: base.html  index.html
Group4_FYP_Website/poh/templates/error/: page_not_found.html
Group4_FYP_Website/poh/templates/leaderboard/: index.html
Group4_FYP_Website/poh/templates/stats/: detail.html  index.html
Scripts/: .gitignore  build_osx.sh  build_win.bat
(+3555 files in other folders)
