[metadata]
name = path-of-hero-website
version = 0.0.1
description = The website for Path of Hero.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    poh
